--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,10 +5,11 @@ project(${PROJECT_NAME})
 if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Arduino")
   add_subdirectory(lib/googletest)
 
-  #include_directories(${ARDUINO_TDD_CPP_HEADERS_DIR})
+  include_directories(${ARDUINO_TDD_CPP_HEADERS_DIR})
+  include_directories(src/include)
 
-  set(SOURCE_FILES src/ExampleTest.cpp)
+  set(SOURCE_FILES src/TemperatureSensorTest.cpp src/LoggerStub.cpp)
 
   add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-  target_link_libraries(${PROJECT_NAME} gtest_main gtest gmock)
+  target_link_libraries(${PROJECT_NAME} arduino_tdd_cpp_lib gtest_main gtest gmock)
 endif ()
