--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -4,6 +4,12 @@ set(PROJECT_NAME arduino_tdd_cpp_lib)
 project(${PROJECT_NAME})
 
 include_directories(${ARDUINO_TDD_CPP_HEADERS_DIR})
-set(SOURCE_FILES TemperatureSensor.cpp)
+set(SOURCE_FILES TemperatureSensor.cpp ArduinoLogger.cpp)
 
-add_library(${PROJECT_NAME} SHARED STATIC ${SOURCE_FILES})
+if (${CMAKE_SYSTEM_NAME} MATCHES "Arduino")
+  generate_arduino_library(${PROJECT_NAME}
+      SRCS ${SOURCE_FILES}
+      BOARD uno)
+else ()
+  add_library(${PROJECT_NAME} SHARED STATIC ${SOURCE_FILES})
+endif ()
