--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -4,7 +4,7 @@ set(PROJECT_NAME arduino_tdd_cpp_lib)
 project(${PROJECT_NAME})
 
 include_directories(${ARDUINO_TDD_CPP_HEADERS_DIR})
-set(SOURCE_FILES TemperatureSensor.cpp ArduinoLogger.cpp)
+set(SOURCE_FILES SmartTemperature.cpp ArduinoLogger.cpp ArduinoTemperatureSensor.cpp)
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Arduino")
   generate_arduino_library(${PROJECT_NAME}
