--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,7 +5,8 @@ project(${PROJECT_NAME})
 include_directories(${ARDUINO_TDD_CPP_HEADERS_DIR})
 include_directories(src/include)
 
-set(SOURCE_FILES src/TemperatureSensorTest.cpp src/LoggerTest.cpp)
+file(GLOB SRC_FILES src/*.cpp)
+set(SOURCE_FILES ${SRC_FILES} ../src/arduino_tdd_cpp.ino)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 target_link_libraries(${PROJECT_NAME} arduino_tdd_cpp_lib gmock gtest_main arduino-mock)
