Refactor the arduino build
* Breaks the test build!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.7.2)
-#set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/cmake/ArduinoToolchain.cmake)
+cmake_minimum_required(VERSION 3.13)
+#set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/cmake/Arduino-Toolchain.cmake)
 project(smart_temperature)
 
 set(CMAKE_CXX_STANDARD 11)
@@ -7,8 +7,6 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-set(SMART_TEMPERATURE_HEADERS_DIR ${PROJECT_SOURCE_DIR}/include)
 
 if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Arduino")
   add_subdirectory(lib/googletest)
@@ -19,4 +17,5 @@ if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Arduino")
   add_subdirectory(test)
 endif ()
 
+add_subdirectory(driver)
 add_subdirectory(src)
