--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.7.2)
+cmake_minimum_required(VERSION 3.13)
 set(PROJECT_NAME smart_temperature_test)
 project(${PROJECT_NAME})
 
@@ -6,7 +6,7 @@ include_directories(${SMART_TEMPERATURE_HEADERS_DIR})
 include_directories(src/include)
 
 file(GLOB SRC_FILES src/*.cpp)
-set(SOURCE_FILES ${SRC_FILES} ../src/main.ino)
+set(SOURCE_FILES ${SRC_FILES} ../src/main.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 target_link_libraries(${PROJECT_NAME} smart_temperature_lib gmock gtest_main arduino-mock)
