Extract driver test into driver directory

--- a/driver/arduino/CMakeLists.txt
+++ b/driver/arduino/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.13)
+
 project(
     arduino-driver
     VERSION 0.0.1
@@ -14,9 +15,13 @@ add_library(arduino_driver STATIC ${_SRCS})
 
 target_link_libraries(arduino_driver PUBLIC driver)
 
-get_board_id(board_id uno)
+if (${CMAKE_SYSTEM_NAME} MATCHES "Arduino")
+  get_board_id(board_id uno)
 
-add_arduino_core_lib(arduino_driver ${board_id})
+  add_arduino_core_lib(arduino_driver ${board_id})
 
-find_arduino_library(arduino_driver_liquid_crystal LiquidCrystal ${board_id} HEADER_ONLY)
-link_arduino_library(arduino_driver arduino_driver_liquid_crystal ${board_id} HEADER_ONLY)
+  find_arduino_library(arduino_driver_liquid_crystal LiquidCrystal ${board_id} HEADER_ONLY)
+  link_arduino_library(arduino_driver arduino_driver_liquid_crystal ${board_id} HEADER_ONLY)
+endif ()
+
+add_subdirectory(test)
