--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,11 +2,9 @@ cmake_minimum_required(VERSION 3.13)
 set(PROJECT_NAME smart_temperature_test)
 project(${PROJECT_NAME})
 
-include_directories(${SMART_TEMPERATURE_HEADERS_DIR})
 include_directories(src/include)
 
-file(GLOB SRC_FILES src/*.cpp)
-set(SOURCE_FILES ${SRC_FILES} ../src/main.cpp)
+file(GLOB _SRCS src/*.cpp)
 
-add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME} smart_temperature_lib gmock gtest_main arduino-mock)
+add_executable(${PROJECT_NAME} ${_SRCS} ${CMAKE_SOURCE_DIR}/src/main.cpp)
+target_link_libraries(${PROJECT_NAME} smart_temperature_lib arduino_driver driver arduino-mock gmock gtest_main)
