--- a/src/smart_temperature_lib/CMakeLists.txt
+++ b/src/smart_temperature_lib/CMakeLists.txt
@@ -3,17 +3,17 @@ cmake_minimum_required(VERSION 3.13)
 set(PROJECT_NAME smart_temperature_lib)
 project(${PROJECT_NAME})
 
-file(GLOB _SRCS *.cpp)
+file(GLOB _SRCS src/*.cpp)
 
-include_directories(include)
+if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Arduino")
+  include_directories(stub)
+  set(_SRCS ${_SRCS} stub/dtostrf.c)
+endif ()
+
+add_library(${PROJECT_NAME} STATIC ${_SRCS})
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Arduino")
-  add_library(${PROJECT_NAME} STATIC ${_SRCS})
-
   target_link_libraries(${PROJECT_NAME} PRIVATE arduino_driver)
-else ()
-  include_directories(stub)
-  add_library(${PROJECT_NAME} SHARED STATIC ${_SRCS} stub/dtostrf.c)
 endif ()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE driver)
