--- a/src/smart_temperature_lib/CMakeLists.txt
+++ b/src/smart_temperature_lib/CMakeLists.txt
@@ -24,3 +24,5 @@ target_include_directories(
       $<INSTALL_INTERFACE:include>
       $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 )
+
+add_subdirectory(test)
