--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Arduino")
   include_directories("${gmock_SOURCE_DIR}/include")
   add_subdirectory(lib/arduino-mock)
   include_directories(${ARDUINO_MOCK_INCLUDE_DIRS})
-  add_subdirectory(test)
 endif ()
 
 add_subdirectory(driver)
-add_subdirectory(src)
+add_subdirectory(smart_temperature_lib)
+add_subdirectory(app)
