--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,4 +2,7 @@ cmake_minimum_required(VERSION 3.13)
 project(smart_temperature_app)
 
 add_subdirectory(src)
-add_subdirectory(test)
+
+if (BUILD_TESTS)
+  add_subdirectory(test)
+endif ()
