--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -1,15 +1,16 @@
 cmake_minimum_required(VERSION 3.13)
+set(PROJECT_NAME driver)
 project(
-    driver
+    ${PROJECT_NAME}
     VERSION 0.0.1
     LANGUAGES CXX
     DESCRIPTION "Driver"
 )
 
-add_library(driver INTERFACE)
+add_library(${PROJECT_NAME} INTERFACE)
 
 target_include_directories(
-    driver
+    ${PROJECT_NAME}
     INTERFACE
       $<INSTALL_INTERFACE:include>
       $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
